# ProofOS

./: .bandit  .codacy.yml  .eslintignore  .eslintrc.json  .gitignore  .prospector.yaml  .pydocstyle  .stylelintignore  CNAME  CONTRIBUTING.md  LICENSE  MIRROR_MANIFEST.md  PROOFOS.md  README.md  SECURITY.md  STANDARDS.md  architecture.md  lakefile.toml  package.json  paper.md  playwright.config.ts  pyproject.toml  pyrightconfig.json  quorum.md  requirements.txt  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  mirror-from-monorepo.yml
docs/: index.html
docs/assets/: index-BOxpsEJH.css  index-CePIn1bd.js  index-oVWzD0F0.js
docs/evidence/: fresh_eyes_audit_proofos_20260610.md  fresh_eyes_audit_proofos_receipt_20260610.json
e2e/: smoke.spec.ts
lean/: CapabilityAccessSeparation.lean  LeishmanBerger.lean
lean/Aevion/SBIR/: ProofCertificate.lean  SafetyTheorems.lean
schemas/: model_access_envelope.schema.json  tinker_checkpoint_receipt.schema.json  tinker_run_config.schema.json
scripts/: metric_gate.py
src/aevion_runtime/: model_access_envelope.py
tests/: test_model_access_envelope.py
